--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="title_activity_main">Calorel</string>
     <string name="package_name">com.calorel.app</string>
     <string name="custom_url_scheme">com.calorel.app</string>
+    <!-- IMPORTANTE: Este debe ser el Client ID de TIPO WEB, no el de Android -->
     <string name="server_client_id">522700969452-vahnkkv9fr8l1rqvfb1e9do2opsp8p2k.apps.googleusercontent.com</string>
 </resources>
