[dyad] Corrigiendo problemas de traducción en el perfil y detalles personales - wrote 4 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -360,6 +360,7 @@
     "first_name": "First Name",
     "last_name": "Last Name",
     "age": "Age",
+    "years_unit": "years",
     "gender": "Gender",
     "gender_placeholder": "Select your gender",
     "gender_female": "Female",
