[dyad] Añadiendo círculo de progreso y meta editable para los pasos - wrote 6 file(s), executed 1 SQL queries

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -253,8 +253,12 @@
     "carbs": "Carbs",
     "fats": "Fats",
     "sugars": "Sugars",
+    "steps": "Steps",
+    "steps_unit": "steps",
     "save": "Save Goals",
-    "ai_suggestions": "AI Suggestions"
+    "ai_suggestions": "AI Suggestions",
+    "save_success": "Goals saved successfully.",
+    "save_error": "Could not save goals."
   },
   "ai_suggestions": {
     "title": "AI Goal Suggestions",
