Reverted all changes back to version 6def9183f7d3870f3c924456d658542d17d5725e

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -253,12 +253,8 @@
     "carbs": "Carbohidratos",
     "fats": "Grasas",
     "sugars": "Azúcares",
-    "steps": "Pasos",
-    "steps_unit": "pasos",
     "save": "Guardar Metas",
-    "ai_suggestions": "Sugerencias de la IA",
-    "save_success": "Metas guardadas con éxito.",
-    "save_error": "No se pudieron guardar las metas."
+    "ai_suggestions": "Sugerencias de la IA"
   },
   "ai_suggestions": {
     "title": "Sugerencias de Metas por IA",
