--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,6 +49,13 @@
   "language_drawer": {
     "title": "Select Language"
   },
+  "login": {
+    "welcome": "Welcome to Calorel",
+    "subtitle": "Your intelligent health companion. Start your journey with one click.",
+    "google_button": "Continue with Google",
+    "terms_privacy": "By continuing, you agree to our <1>Terms of Service</1> and <3>Privacy Policy</3>.",
+    "error_title": "Login Error"
+  },
   "bottom_nav": {
     "home": "Home",
     "settings": "Settings",
@@ -136,7 +143,7 @@
     "subtitle": "Your unlocked achievements and streaks.",
     "meal_streak": "Meal Streak",
     "total_badges": "Total Badges",
-    "hydration_streak": "Hydration Streak",
+    "hydration_streak": "Hydration Days",
     "weight_loss": "Weight Loss",
     "notification_title": "Badge Unlocked!"
   },
@@ -158,9 +165,9 @@
     "streak_450": { "name": "Master", "desc": "450 days of total discipline." },
     "streak_500": { "name": "Beyond", "desc": "You surpassed 500 days. Wow!" },
     "water_1": { "name": "First Glass", "desc": "Log water for 1 day." },
-    "water_3": { "name": "Consistent Hydration", "desc": "3-day water streak." },
-    "water_6": { "name": "Hydration Pro", "desc": "6-day water streak." },
-    "water_10": { "name": "Water Master", "desc": "10-day water streak." },
+    "water_3": { "name": "Consistent Hydration", "desc": "3 days meeting your water goal." },
+    "water_6": { "name": "Hydration Pro", "desc": "6 days meeting your water goal." },
+    "water_10": { "name": "Water Master", "desc": "10 days meeting your water goal." },
     "weight_1": { "name": "First Kilogram", "desc": "Lose your first kilogram." },
     "weight_10": { "name": "10 kg Goal", "desc": "Reach 10 kg lost." },
     "weight_20": { "name": "20 kg Goal", "desc": "You've lost 20 kg." },
