--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -161,7 +161,8 @@
     "lunch_time": "¡Hora de la comida!",
     "snack_time": "¡Hora del snack!",
     "dinner_time": "¡Hora de la cena!",
-    "gap_time_message": "No es hora de comer"
+    "gap_time_message": "No es hora de comer",
+    "scan_food_button": "Escanear Comida"
   },
   "badges": {
     "title": "Mis Insignias",
